testing/stage_20/invalid/int_void.c
int main()
{
	int void a=2;
	return a;
}